buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath libs.jsemver
	}
}

plugins {
	id 'java'
	id 'application'
	id 'jacoco'
	id 'org.openjfx.javafxplugin' version '0.1.0' apply false
	id 'org.checkerframework' version '1.0.2' apply false
	
	// auto create automatic modules:
	//id 'extra-java-module-info' apply false
	// see:
	// https://docs.gradle.org/7.0.2/samples/sample_java_modules_with_transform.html
}

//apply plugin: 'extra-java-module-info'

wrapper {
	gradleVersion = '9.3.1'
}

import de.bernd_michaely.common.semver.*

final def javaLangVersion = JavaLanguageVersion.of(25)
final def jvmVendor = JvmVendorSpec.ADOPTIUM
//final def jvmVendor = JvmVendorSpec.matching('Arch Linux')

java {
	toolchain {
		languageVersion = javaLangVersion
		vendor = jvmVendor
	}
}
tasks.withType(JavaExec).configureEach {
	javaLauncher = javaToolchains.launcherFor {
		languageVersion = javaLangVersion
		vendor = jvmVendor
	}
}

// project local properties:
final String propVersion = 'diascope.version'
final String versionBase = project.hasProperty(propVersion) ? project.getProperty(propVersion) : '0'

final String propPreRelease = 'diascope.pre-release'
final String versionPreRelease = project.hasProperty(propPreRelease) ?
	"${versionBase}-${project.getProperty(propPreRelease)}" : versionBase

// global (user) properties (build identifier supersedes reading subversion revision):
final String propBuild = 'diascope.build.identifier'
final String propReadSvnRevision = 'diascope.build.readSvnRevision'
ext.isReadingSvnRevision = project.hasProperty(propReadSvnRevision) ? Boolean.valueOf(project.getProperty(propReadSvnRevision)) : false
	
logger.lifecycle "-> Getting semantic version build number from subversion revision (user property »${propReadSvnRevision}«) : " + isReadingSvnRevision

def String readSvnRevision()
{
	def svnRev = ''
	if (isReadingSvnRevision) {
		final def process = [ 'svn', 'info', '--show-item', 'repos-root-url', '--no-newline' ].execute(null, projectDir)
		if (process.waitFor()) {
			logger.lifecycle "   -> Can't get subversion revision"
		}
		else {
			final boolean isolateNumericBuildParts = true
			final String urlSvnRepos = process.text.trim()
			logger.lifecycle "   Reading subversion revision (repos-root-url: »${urlSvnRepos}«)"
			final def process2 = [ 'svn', 'info', '--show-item', 'revision', '--no-newline', urlSvnRepos ].execute()
			if (process2.waitFor()) {
				logger.lifecycle "   -> Can't get head revision from subversion server" +
				        " -> falling back to reading local working copy revision"
				final def process3 = [ 'svnversion', '-n' ].execute(null, projectDir)
				if (process3.waitFor()) {
					logger.lifecycle " -> Can't get subversion revision"
					svnRev = ''
				}
				else {
					svnRev = process3.text.trim()
					if (svnRev) {
						// create valid semantic version build-nr:
						svnRev = 'r' + svnRev.replaceAll('[^0-9a-zA-Z]+' , '.')
						svnRev = svnRev.endsWith('.') ? svnRev.substring(0, n-1) : svnRev
						// isolate numeric build parts:
						final int n = svnRev.length()
						final def s = new StringBuilder();
						final def p = ~/([a-zA-Z][0-9])|([0-9][a-zA-Z])/
						for (int i = 1; i < n; i++) {
							s.append(svnRev.substring(i-1, i))
							if (svnRev.substring(i-1, i+1) ==~ p) s.append('.')
						}
						svnRev = s.append(svnRev.substring(n-1, n)).toString()
					}
				}
			} else {
				svnRev = process2.text.trim()
				svnRev = (isolateNumericBuildParts ? 'r.' : 'r') + ((svnRev as Integer) + 1)
			}
			logger.lifecycle "   -> subversion revision is »${svnRev}«"
		}
	}
	return svnRev
}

final String build_id = project.hasProperty(propBuild) ? project.getProperty(propBuild) : readSvnRevision()
final var semVer = SemanticVersion.of(build_id ? "${versionPreRelease}+${build_id}" : versionPreRelease)

final var semVerFsvBase = SemanticVersion.of(libs.filesystemview.base.get().version)
final var semVerFsvFX = SemanticVersion.of(libs.filesystemview.fx.get().version)

if (semVerFsvFX < semVerFsvBase) throw new StopExecutionException(
	"Inconsistent filesystemview library versions: ${semVerFsvFX.canonicalForm} < ${semVerFsvBase.canonicalForm}")
	
// files:

final String fileNameSemVer = 'src/main/resources/de/bernd_michaely/diascope/app/semantic_version.txt'
final def fileSemVer = project(':module-gui-fx').file(fileNameSemVer)

final def fileVersionShield = file("doc/shields/version.svg")

description = 'A JavaFX based image viewer with multi layer image comparison.'

allprojects {
	group = 'de.bernd-michaely'
	version = semVer.canonicalForm
	
	apply plugin: 'org.checkerframework'

	checkerFramework {
		version = libs.checker.get().version
		checkers = [
		'org.checkerframework.checker.nullness.NullnessChecker'
		]
		excludeTests = true
	}

	repositories {
		mavenCentral()
		//mavenLocal()
	}

	if (project == rootProject || name.endsWith('-fx')) {
		apply plugin: 'org.openjfx.javafxplugin'
		javafx {
			version = '26.0.1'
		}
		logger.lifecycle "-> Applying JavaFX ${javafx.version} plugin to project »$path«"
	}
}

final Map<String, String> _map = new LinkedHashMap<>()
final def _put = { String key, Object value -> _map.put(key, ""+value) }
	
_put "Root project", "${name} ${semVer.description}"
_put "Base dir", "»${file('.')}«"
_put "Running Gradle", project.gradle.gradleVersion
_put "Java source compatibility", java.sourceCompatibility
_put "Java target compatibility", java.targetCompatibility
_put "Java toolchain", java.toolchain.displayName
_put "Compile -> Debug-Level", compileJava.options.debug
_put "Test-Compile -> Debug-Level", compileTestJava.options.debug
_put "Modularity enabled", java.modularity.inferModulePath.get()
_put "Using Checker Framework", checkerFramework.version.get()
_put "Using JSemVer", SemanticVersion.of(libs.jsemver.get().version).description
_put "Using lib-filesystem-view", "base [${semVerFsvBase.canonicalForm}] fx [${semVerFsvFX.canonicalForm}]"
_put "Using JUnit", libs.junit.jupiter.get().version
_put "Using JaCoCo", jacoco.toolVersion
_put "Included child projects", childProjects.keySet().stream().sorted().toList()

final int maxLenKey   = _map.keySet().stream().mapToInt(s->s.length()).max().orElse(0)
final int maxLenValue = _map.values().stream().mapToInt(s->(""+s).length()).max().orElse(0)
final int maxLenLine = maxLenKey + 3 + maxLenValue
final def _line = "-" * (4 + maxLenLine)

logger.lifecycle _line
boolean isHeader = true
_map.each { key, value ->
	println "| %${maxLenKey}s | %-${maxLenValue}s |".formatted (key, value)
	if (isHeader) {
		logger.lifecycle _line
		isHeader = false
	}
}
logger.lifecycle _line

// semVer.build.ifPresent(build -> logger.lifecycle "--> Build: ${build.identifiers}")

subprojects {
	tasks.withType(JavaCompile).configureEach {
		javaCompiler = javaToolchains.compilerFor {
			languageVersion = javaLangVersion
			vendor = jvmVendor
		}
	}
	tasks.withType(Test).configureEach {
		javaLauncher = javaToolchains.launcherFor {
			languageVersion = javaLangVersion
			vendor = jvmVendor
		}
	}
	logger.lifecycle "==> Configuring sub-project »$name ($version)«"
	tasks.withType(JavaCompile) {
		logger.lifecycle "=> Configuring task »$name«"
		options.compilerArgs += '-Xlint:unchecked'
		options.compilerArgs += '-Xlint:deprecation'
		options.compilerArgs += '-Xdiags:verbose'
		logger.lifecycle "   -> compiler args : ${options.compilerArgs}"
	}
}

/*
extraJavaModuleInfo {
automaticModule('batik-all-1.17.jar', 'batik')	
}
 */

dependencies {
	implementation project (':lib-common-cli-parser')
	implementation project (':module-gui-fx')
	implementation libs.jsemver
	//implementation 'com.github.weisj:jsvg:1.5.0'
	//implementation 'org.apache.xmlgraphics:batik-all:1.17'
	//implementation 'xml-apis:xml-apis:1.4.01'
	//implementation 'xml-apis:xml-apis-ext:1.3.04'
	//implementation 'org.apache.xmlgraphics:xmlgraphics-commons:2.9'
}

def _getVersionShield(String name, SemanticVersion version, File fileVersionShield) {
	final def toShieldParam = { it replaceAll '-', '--' replaceAll '_', '__' replaceAll '\\s', '_'  }
	final String label = toShieldParam name
	final String message = toShieldParam (version.getCanonicalForm(true))
	final String color = 'blue'
	final def url = new URI("https://img.shields.io/badge/${label}-${message}-${color}").toURL()
	logger.lifecycle "→ getting data from URL »${url}«"
	fileVersionShield.write url.text
}

task writeSemVer {
	description = "Write application semantic version to resource file »${fileSemVer}«"
	group = processResources.group
	doFirst {
		boolean doWriteSemVer
		boolean doWriteShield
		if (fileSemVer) {
			try(var stream = fileSemVer.newInputStream())
			{
				var oldSemVer = SemanticVersion.of(stream)
				doWriteSemVer = oldSemVer.canonicalForm != semVer.canonicalForm
				doWriteShield = oldSemVer != semVer
			}
		} else {
			doWriteSemVer = true
			doWriteShield = true
		}
		if (doWriteSemVer) {
			logger.lifecycle "→ project version changed"
			logger.lifecycle "→ writing SemVer resource"
			fileSemVer.write semVer.canonicalForm
			logger.lifecycle "→ writing version shield"
		} else {
			logger.lifecycle "→ project version unchanged"
		}
		if (doWriteShield) {
			_getVersionShield(rootProject.name, semVer, fileVersionShield)
		}
	}
}
processResources.dependsOn writeSemVer

task getVersionShield {
	description = "Generate a version shield by accessing shields.io and write it to file »${fileVersionShield}«"
	group = javadoc.group
	doLast {
		_getVersionShield(rootProject.name, semVer, fileVersionShield)
	}
}

application {
	mainModule = 'de.bernd_michaely.diascope'
	mainClass  = 'de.bernd_michaely.diascope.Launcher'
	
	int javafxVer
	final def m = javafx.version =~ /(\d+)(\.\d+(\.\d+)?)?(-.+)?(\+.+)?/
	if (m) {
		javafxVer = m.group(1) as int
		logger.lifecycle " -> JavaFX major version is ${javafxVer}"
	} else {
		throw new StopExecutionException("Can't get JavaFX major version.")
	}
	final int javaLangVer = javaLangVersion.asInt()

	if (javaLangVer >= 24) {
		applicationDefaultJvmArgs += '--enable-native-access=javafx.graphics'
	}
	if (javafxVer >= 25) {
		applicationDefaultJvmArgs += '-Djavafx.enablePreview=true'
		applicationDefaultJvmArgs += '-Djavafx.suppressPreviewWarning=true'
	}
	logger.lifecycle "==> applicationDefaultJvmArgs -> " + applicationDefaultJvmArgs
}

jar {
	javafx {
		//	modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.swing', 'javafx.web' ]
		modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls' ]
	}
	manifest {
		attributes ( 'Main-Class' : "${application.mainModule.get()}/${application.mainClass.get()}" )
	}
}
		
run {
	logger.lifecycle " -> run task modularity : ${modularity.inferModulePath.get()}"
	
	systemProperty 'java.util.logging.config.file', file('logging.properties')
	
	def propertyNameDiascopeArgs = 'diascope.arg'
	int i = 0
	while (project.hasProperty("${propertyNameDiascopeArgs}.${i}")) {
		args += project.getProperty("${propertyNameDiascopeArgs}.${i++}")
	}
	logger.lifecycle " -> Running with args :"
	int k = 0
	for (def arg: args) logger.lifecycle "    [${k++}] : »${arg}«"
}
